Update All In One.html

--- a/All In One.html
+++ b/All In One.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>Edith-Chirrie &#9824; &#9827; &#9829; &#9830;
+        <title>Sam Tx &#9824; &#9827; &#9829; &#9830;
         </title>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
